--- a/index.html
+++ b/index.html
@@ -1916,7 +1916,7 @@ https://allinonereborn.com/dd11.m3u8?id=5047
 #EXTINF:-1 tvg-id="6756" tvg-logo="" group-title="KIDS",ODDBODS LIVE 3
 https://allinonereborn.com/dd11.m3u8?id=6756
 
-#EXTINF:-1 tvg-id="634" tvg-logo="" group-title="KIDS",BABY TV HD
+#EXTINF:-1 tvg-id="634" tvg-logo="" group-title="KIDS",Disney India HD
 https://allinonereborn.com/dd11.m3u8?id=634
 
 #EXTINF:-1 tvg-id="3197" tvg-logo="" group-title="KIDS",BABY FIRST TV
