--- a/index.html
+++ b/index.html
@@ -14496,3 +14496,268 @@ https://allinonereborn.com/dd.m3u8?id=20132
 
 #EXTINF:-1 tvg-id="20147" tvg-logo="" group-title="MALAYALAM | 24/7",MALAYALAM ACTOR JAYAN HD
 https://allinonereborn.com/dd.m3u8?id=20147
+
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BANGLA CINEMA 1 HD 
+https://allinonereborn.com/dd.m3u8?id=20757
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BANGLA THRILLER CINEMA HD 
+https://allinonereborn.com/dd.m3u8?id=20762
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BANGLA FAMILY CINEMA HD 
+https://allinonereborn.com/dd.m3u8?id=20662
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BANGLA DRAMA CINEMA HD 
+https://allinonereborn.com/dd.m3u8?id=20667
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BANGLA ROMANCE CINEMA 1 HD 
+https://allinonereborn.com/dd.m3u8?id=20692
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BANGLA CLASSIC FAMILY HD 
+https://allinonereborn.com/dd.m3u8?id=20672
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BANGLA ACTION CINEMA 1 HD 
+https://allinonereborn.com/dd.m3u8?id=20682
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BANGLA 2020-2022 CINEMA HD 
+https://allinonereborn.com/dd.m3u8?id=20687
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BANGLA CLASSIC CINEMA 1 HD 
+https://allinonereborn.com/dd.m3u8?id=20677
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BANGLA CLASSIC ACTION DRAMA CINEMA HD 
+https://allinonereborn.com/dd.m3u8?id=20737
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BANGLA COMEDY CINEMA HD 
+https://allinonereborn.com/dd.m3u8?id=20747
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BANGLA CRIME CINEMA HD 
+https://allinonereborn.com/dd.m3u8?id=20707
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BENGALI EROSNOW CLASSIC CINEMA 1 
+https://allinonereborn.com/dd.m3u8?id=20697
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BENGALI CLASSIC ROMANCE CINEMA HD 
+https://allinonereborn.com/dd.m3u8?id=20702
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BENGALI CLASSIC DRAMA CINEMA HD 
+https://allinonereborn.com/dd.m3u8?id=20717
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BENGALI COMEDY CINEMA HD 
+https://allinonereborn.com/dd.m3u8?id=20712
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BENGALI ACTION CINEMA HD 
+https://allinonereborn.com/dd.m3u8?id=20722
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BENGALI CRIME CINEMA HD 
+https://allinonereborn.com/dd.m3u8?id=20742
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BENGALI DRAMA CINEMA HD 
+https://allinonereborn.com/dd.m3u8?id=20727
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BENGALI FAMILY CINEMA HD 
+https://allinonereborn.com/dd.m3u8?id=20752
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA", BENGALI MYSTERY CINEMA HD 
+https://allinonereborn.com/dd.m3u8?id=20732
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",NON STOP BENGALI SONGS 
+https://allinonereborn.com/dd.m3u8?id=5857
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",TATA SKY BANGLA CINEMA 4K 
+https://allinonereborn.com/dd.m3u8?id=3912
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",BANGLA TALKIES 
+https://allinonereborn.com/dd.m3u8?id=11397
+#EXTINF:-1 tvg-id="in_starjalshahd.in" tvg-logo="" group-title="BENGALI | BANGLA",STAR JALSHA 4K 
+https://allinonereborn.com/dd.m3u8?id=7799
+#EXTINF:-1 tvg-id="in_starjalshahd.in" tvg-logo="" group-title="BENGALI | BANGLA",STAR JALSHA FHD 
+https://allinonereborn.com/dd.m3u8?id=5616
+#EXTINF:-1 tvg-id="in_starjalshahd.in" tvg-logo="" group-title="BENGALI | BANGLA",STAR JALSHA USA 4K 
+https://allinonereborn.com/dd.m3u8?id=10160
+#EXTINF:-1 tvg-id="in_starjalshahd.in" tvg-logo="" group-title="BENGALI | BANGLA",STAR JALSHA USA FHD 
+https://allinonereborn.com/dd.m3u8?id=3975
+#EXTINF:-1 tvg-id="in_starjalshahd.in" tvg-logo="" group-title="BENGALI | BANGLA",STAR JALSHA UK 
+https://allinonereborn.com/dd.m3u8?id=5617
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",STAR JALSHA MOVIES 
+https://allinonereborn.com/dd.m3u8?id=686
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",STAR JALSHA MOVIES 4K 
+https://allinonereborn.com/dd.m3u8?id=7803
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",ZEE BANGLA 4K 
+https://allinonereborn.com/dd.m3u8?id=7791
+#EXTINF:-1 tvg-id="in_zeebanglahd.in" tvg-logo="" group-title="BENGALI | BANGLA",ZEE BANGLA HD 
+https://allinonereborn.com/dd.m3u8?id=5618
+#EXTINF:-1 tvg-id="in_zeebanglahd.in" tvg-logo="" group-title="BENGALI | BANGLA",ZEE BANGLA 4K USA 
+https://allinonereborn.com/dd.m3u8?id=10153
+#EXTINF:-1 tvg-id="in_zeebanglahd.in" tvg-logo="" group-title="BENGALI | BANGLA",ZEE BANGLA USA 
+https://allinonereborn.com/dd.m3u8?id=3976
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",ZEE BANGLA UK 
+https://allinonereborn.com/dd.m3u8?id=5619
+#EXTINF:-1 tvg-id="in_zeebanglacinema.in" tvg-logo="" group-title="BENGALI | BANGLA",ZEE BANGLA CINEMA 
+https://allinonereborn.com/dd.m3u8?id=3969
+#EXTINF:-1 tvg-id="in_colorsbanglahd.in" tvg-logo="" group-title="BENGALI | BANGLA",COLORS BANGLA 4K 
+https://allinonereborn.com/dd.m3u8?id=7795
+#EXTINF:-1 tvg-id="in_colorsbanglahd.in" tvg-logo="" group-title="BENGALI | BANGLA",COLORS BANGLA HD 
+https://allinonereborn.com/dd.m3u8?id=5615
+#EXTINF:-1 tvg-id="in_colorsbanglahd.in" tvg-logo="" group-title="BENGALI | BANGLA",COLORS BANGLA USA 4K 
+https://allinonereborn.com/dd.m3u8?id=10167
+#EXTINF:-1 tvg-id="in_colorsbanglahd.in" tvg-logo="" group-title="BENGALI | BANGLA",COLORS BANGLA USA 
+https://allinonereborn.com/dd.m3u8?id=3974
+#EXTINF:-1 tvg-id="in_colorsbanglahd.in" tvg-logo="" group-title="BENGALI | BANGLA",COLORS BANGLA UK 
+https://allinonereborn.com/dd.m3u8?id=10174
+#EXTINF:-1 tvg-id="in_sonyaath.in" tvg-logo="" group-title="BENGALI | BANGLA",SONY AATH HD 
+https://allinonereborn.com/dd.m3u8?id=3161
+#EXTINF:-1 tvg-id="in_sonyaath.in" tvg-logo="" group-title="BENGALI | BANGLA",SONY AATH USA 
+https://allinonereborn.com/dd.m3u8?id=5620
+#EXTINF:-1 tvg-id="" tvg-logo="" group-title="BENGALI | BANGLA",DEEN TV 
+https://allinonereborn.com/dd.m3u8?id=25314
+#EXTINF:-1 tvg-id="uk_atnbangla.uk" tvg-logo="" group-title="BENGALI | BANGLA",ATN BANGLA 
+https://allinonereborn.com/dd.m3u8?id=3153
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",KHUSHBOO 
+https://allinonereborn.com/dd.m3u8?id=3160
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",ATN NEWS 
+https://allinonereborn.com/dd.m3u8?id=3175
+#EXTINF:-1 tvg-id="in_islamchannel.uk" tvg-logo="" group-title="BENGALI | BANGLA",ATN ISLAM HD 
+https://allinonereborn.com/dd.m3u8?id=3149
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",T SPORTS 
+https://allinonereborn.com/dd.m3u8?id=9285
+#EXTINF:-1 tvg-id="in_foxlifehd.in" tvg-logo="" group-title="BENGALI | BANGLA",FOX LIFE 
+https://allinonereborn.com/dd.m3u8?id=8460
+#EXTINF:-1 tvg-id="in_discoveryhd.in" tvg-logo="" group-title="BENGALI | BANGLA",DISCOVERY WORLD 
+https://allinonereborn.com/dd.m3u8?id=8464
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",SUN BANGLA HD 
+https://allinonereborn.com/dd.m3u8?id=5846
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",BTV BANGLA 
+https://allinonereborn.com/dd.m3u8?id=3145
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",BTV CHATTGRAM 
+https://allinonereborn.com/dd.m3u8?id=3966
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",BTV NATIONAL 
+https://allinonereborn.com/dd.m3u8?id=5849
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",BTV WORLD 
+https://allinonereborn.com/dd.m3u8?id=5850
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",CHANNEL S UK 
+https://allinonereborn.com/dd.m3u8?id=5848
+#EXTINF:-1 tvg-id="in_tsbanglacinema.in" tvg-logo="" group-title="BENGALI | BANGLA",MOVIE BANGLA 
+https://allinonereborn.com/dd.m3u8?id=3181
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",NRB BANGLA HD 
+https://allinonereborn.com/dd.m3u8?id=3164
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",BANGLA VISION 4K 
+https://allinonereborn.com/dd.m3u8?id=3137
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",EKATTOR TV 4K 
+https://allinonereborn.com/dd.m3u8?id=3146
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",INDIA NEWS BANGLA 
+https://allinonereborn.com/dd.m3u8?id=3156
+#EXTINF:-1 tvg-id="in_disneychannel.in" tvg-logo="" group-title="BENGALI | BANGLA",CHANNEL I 4K 
+https://allinonereborn.com/dd.m3u8?id=3173
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",GAZI TV 4K 
+https://allinonereborn.com/dd.m3u8?id=3914
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",MAASRANGA TV 4K 
+https://allinonereborn.com/dd.m3u8?id=3971
+#EXTINF:-1 tvg-id="in_suntvhd.in" tvg-logo="" group-title="BENGALI | BANGLA",NTV BANGLA 
+https://allinonereborn.com/dd.m3u8?id=3188
+#EXTINF:-1 tvg-id="in_suntvhd.in" tvg-logo="" group-title="BENGALI | BANGLA",NTV BANGLA USA 
+https://allinonereborn.com/dd.m3u8?id=3295
+#EXTINF:-1 tvg-id="in_24ghante.in" tvg-logo="" group-title="BENGALI | BANGLA",ZEE 24 GHANTA 
+https://allinonereborn.com/dd.m3u8?id=4081
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",NEXUS TV 
+https://allinonereborn.com/dd.m3u8?id=8472
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",DESHE BIDESHE 
+https://allinonereborn.com/dd.m3u8?id=1696
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",MOHONA TV 
+https://allinonereborn.com/dd.m3u8?id=3172
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",SOMOY NEWS 
+https://allinonereborn.com/dd.m3u8?id=3184
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",DBC NEWS 4K 
+https://allinonereborn.com/dd.m3u8?id=3168
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",NEWS 24 4K 
+https://allinonereborn.com/dd.m3u8?id=3140
+#EXTINF:-1 tvg-id="in_news18bangla.in" tvg-logo="" group-title="BENGALI | BANGLA",NEWS 18 BANGLA 
+https://allinonereborn.com/dd.m3u8?id=879
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",CALCUTTA NEWS 
+https://allinonereborn.com/dd.m3u8?id=5853
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",R PLUS 
+https://allinonereborn.com/dd.m3u8?id=11400
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",R PLUS GOLD 
+https://allinonereborn.com/dd.m3u8?id=11403
+#EXTINF:-1 tvg-id="in_tv9.in" tvg-logo="" group-title="BENGALI | BANGLA",TV9 BANGLA 
+https://allinonereborn.com/dd.m3u8?id=11420
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",REPUBLIC BANGLA 
+https://allinonereborn.com/dd.m3u8?id=11423
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",ROSE TV 
+https://allinonereborn.com/dd.m3u8?id=11417
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",DESH TV 
+https://allinonereborn.com/dd.m3u8?id=3141
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",EKUSHEY TV 
+https://allinonereborn.com/dd.m3u8?id=3152
+#EXTINF:-1 tvg-id="in_indfilmchannel.ca" tvg-logo="" group-title="BENGALI | BANGLA",INDEPENDENT TV 
+https://allinonereborn.com/dd.m3u8?id=3185
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",RTV 4K 
+https://allinonereborn.com/dd.m3u8?id=3147
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",CHANNEL 24 HD 
+https://allinonereborn.com/dd.m3u8?id=3171
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",JAMUNA 
+https://allinonereborn.com/dd.m3u8?id=3182
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",BIJOY TV 4K 
+https://allinonereborn.com/dd.m3u8?id=3177
+#EXTINF:-1 tvg-id="in_vissatv.in" tvg-logo="" group-title="BENGALI | BANGLA",SATV 4K 
+https://allinonereborn.com/dd.m3u8?id=3154
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",BOISHAKHI TV 4K 
+https://allinonereborn.com/dd.m3u8?id=3144
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",AZAN TV 
+https://allinonereborn.com/dd.m3u8?id=5613
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",CHANNEL S 
+https://allinonereborn.com/dd.m3u8?id=3135
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",DESHI TV 
+https://allinonereborn.com/dd.m3u8?id=3174
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",NAGORIK 4K 
+https://allinonereborn.com/dd.m3u8?id=5614
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",PROTIDIN TIME 
+https://allinonereborn.com/dd.m3u8?id=3163
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",BISWA BANGLA 24 
+https://allinonereborn.com/dd.m3u8?id=3151
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",DURONTO TV 
+https://allinonereborn.com/dd.m3u8?id=3189
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",CNN BANGLA 
+https://allinonereborn.com/dd.m3u8?id=3186
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",ASIAN TV 4K 
+https://allinonereborn.com/dd.m3u8?id=3169
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",CHANNEL 9 4K 
+https://allinonereborn.com/dd.m3u8?id=3162
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",DEEPTO TV 4K 
+https://allinonereborn.com/dd.m3u8?id=3183
+#EXTINF:-1 tvg-id="in_sangeetbangla.in" tvg-logo="" group-title="BENGALI | BANGLA",GAAN BANGLA TV 4K 
+https://allinonereborn.com/dd.m3u8?id=3967
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",MY TV 
+https://allinonereborn.com/dd.m3u8?id=3178
+#EXTINF:-1 tvg-id="natgeowild.in" tvg-logo="" group-title="BENGALI | BANGLA",NAT GEO HD 
+https://allinonereborn.com/dd.m3u8?id=654
+#EXTINF:-1 tvg-id="in_aakashaath.in" tvg-logo="" group-title="BENGALI | BANGLA",AAKASH 
+https://allinonereborn.com/dd.m3u8?id=1029
+#EXTINF:-1 tvg-id="in_sangeetbangla.in" tvg-logo="" group-title="BENGALI | BANGLA",SANGEET BANGLA 
+https://allinonereborn.com/dd.m3u8?id=789
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",THE CHANNEL TV 
+https://allinonereborn.com/dd.m3u8?id=5621
+#EXTINF:-1 tvg-id="in_abpananda.in" tvg-logo="" group-title="BENGALI | BANGLA",ANANDA TV 
+https://allinonereborn.com/dd.m3u8?id=3943
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",DHOOM MUSIC 
+https://allinonereborn.com/dd.m3u8?id=3139
+#EXTINF:-1 tvg-id="in_rupashibangla.in" tvg-logo="" group-title="BENGALI | BANGLA",RUPASI BANGLA 
+https://allinonereborn.com/dd.m3u8?id=3187
+#EXTINF:-1 tvg-id="in_ddbangla.in" tvg-logo="" group-title="BENGALI | BANGLA",DD BANGLA 
+https://allinonereborn.com/dd.m3u8?id=1030
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",TBN 24 HD 
+https://allinonereborn.com/dd.m3u8?id=5350
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",MTA BANGLA 
+https://allinonereborn.com/dd.m3u8?id=5654
+#EXTINF:-1 tvg-id="in_chardiklatimetv.in" tvg-logo="" group-title="BENGALI | BANGLA",TIME TV 
+https://allinonereborn.com/dd.m3u8?id=3296
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",PEACE TV BANGLA 
+https://allinonereborn.com/dd.m3u8?id=3150
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",IQURA BANGALI 
+https://allinonereborn.com/dd.m3u8?id=3167
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",ALIF TV 4K 
+https://allinonereborn.com/dd.m3u8?id=5845
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",BANGLA TV 4K 
+https://allinonereborn.com/dd.m3u8?id=5856
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",BANGLA TIME 
+https://allinonereborn.com/dd.m3u8?id=8468
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",NANDAN TV 
+https://allinonereborn.com/dd.m3u8?id=5852
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",SANGSAD BANGLA 
+https://allinonereborn.com/dd.m3u8?id=5854
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",ENTER 10 BANGLA 
+https://allinonereborn.com/dd.m3u8?id=5855
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",CN NEWS 
+https://allinonereborn.com/dd.m3u8?id=8476
+#EXTINF:-1 tvg-id="in_abpananda.in" tvg-logo="" group-title="BENGALI | BANGLA",ABP ANANDA 
+https://allinonereborn.com/dd.m3u8?id=8480
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",I TV 
+https://allinonereborn.com/dd.m3u8?id=8484
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",IQRA TV 
+https://allinonereborn.com/dd.m3u8?id=8488
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",MILLENIUM TV 
+https://allinonereborn.com/dd.m3u8?id=8492
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",NEWSDAILY 24 BENGALI 
+https://allinonereborn.com/dd.m3u8?id=8496
+#EXTINF:-1 tvg-id="uk_madanichannel.uk" tvg-logo="" group-title="BENGALI | BANGLA",MADANI BANGLA 
+https://allinonereborn.com/dd.m3u8?id=11406
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",TELEFILM 
+https://allinonereborn.com/dd.m3u8?id=11409
+#EXTINF:-1 tvg-id="glotv" tvg-logo="" group-title="BENGALI | BANGLA",RTV MUSIC 4K 
+https://allinonereborn.com/dd.m3u8?id=6795
